--- a/.gitignore
+++ b/.gitignore
@@ -137,7 +137,7 @@ celerybeat.pid
 # Environments
 .env
 .envrc
-.venv
+.venv/
 env/
 venv/
 ENV/
@@ -190,6 +190,11 @@ cython_debug/
 
 # Ruff stuff:
 .ruff_cache/
+
+# Repo-local DuckDB catalogues (generated)
+data_db/*.duckdb
+data_db/*.duckdb.wal
+data_db/*.duckdb.tmp
 
 # PyPI configuration file
 .pypirc
