Accelerate Hansen parcel stats with Numba

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [{name = "Single.Earth Foundation (community)"}]
 # Keep runtime deps minimal; add only when directly imported by repo code.
 dependencies = [
   "jsonschema>=4.21",
+  "numba",
 ]
 
 [project.optional-dependencies]
